# tmgr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  RELEASENOTES.md  gh-release-script.sh  release-script.py  tasks.db
.github/: CODEOWNERS
databases/: t1.db
src/: commands.rs  db.rs  db_cmds.rs  db_ops.rs  main.rs  model.rs  parser.rs  persistent.rs  state_mgr.rs  tasks.db  utils.rs
src/cli/: mod.rs  model.rs  parser.rs  result_handler.rs
src/cli/tests/: mod.rs  result_handler_test.rs
src/commands/: add.rs  complete.rs  db.rs  db_cmds.rs  delete.rs  list.rs  migrate.rs  mod.rs  model.rs  note.rs  status.rs  todo_cmds.rs  tui.rs  update.rs  upgrade.rs  view.rs
src/commands/db_cmds/: db.rs  db_errors.rs  persistent.rs
src/commands/tests/: add_test.rs  complete_test.rs  delete_test.rs  list_test.rs  migrate_test.rs  mod.rs  note.rs  note_test.rs  status_test.rs  update_test.rs  upgrade_test.rs  view_test.rs
src/commands/tui/: app.rs  ui.rs
src/parser/: commands.rs  state_mgr.rs
src/parser/commands/: db_cmds.rs  init_cmds.rs  status_cmds.rs  todo_cmds.rs  update_cmds.rs
src/parser/commands/db_cmds/: db.rs
src/parser/commands/update_cmds/: request_models.rs
