[package]
name = "tmgr"
version = "2.2.5"
edition = "2021"
authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
repository = "https://github.com/charliekarafotias/tmgr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = { version = "2.1.4", features = ["kv-mem", "kv-surrealkv"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0.25"
directories = "6.0.0"
colored = "3.0.0"
comfy-table = "7.1.3"


[dev-dependencies]
chrono = "0.4.39"
tempfile = "3.15.0"
