[package]
name = "tmgr"
version = "2.2.6"
edition = "2024"
authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
repository = "https://github.com/charliekarafotias/tmgr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-mem", "kv-surrealkv"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0.26"
directories = "6.0.0"
colored = "3.0.0"
comfy-table = "7.1.4"


[dev-dependencies]
chrono = "0.4.40"
tempfile = "3.19.1"
