[package]
name = "tmgr"
version = "3.0.0"
edition = "2024"
authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
repository = "https://github.com/charliekarafotias/tmgr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.2", features = ["kv-mem", "kv-surrealkv"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.15", features = ["json"] }
semver = "1.0.26"
directories = "6.0.0"
colored = "3.0.0"
comfy-table = "7.1.4"


[dev-dependencies]
chrono = "0.4.41"
tempfile = "3.20.0"
